button overlapping on one another fixed

--- a/searchbot-ui/src/app/button-replies/button-replies.component.css
+++ b/searchbot-ui/src/app/button-replies/button-replies.component.css
@@ -6,6 +6,5 @@ ul {
 	list-style: none;
 	margin-left: 10px;
 	margin-right: 10px;
-	width: 50px;
 }
 
